<resources>
    <string name="app_name">FamilyMap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="serverHost">Server Host</string>
    <string name="serverPort">Server Port</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender</string>
    <string name="signInButton">Sign In</string>
    <string name="registerButton">Register</string>
    <string name="maleButton">Male</string>
    <string name="femaleButton">Female</string>
    <string name="title_activity_settings">Settings</string>
    <string name="eventsTitle">Life Events</string>
    <string name="relativesTitle">Family</string>
    <string name="eventToastText">You selected %s.</string>
    <string name="relativeToastText">You selected %s.</string>
    <string name="logoutButton">Logout</string>


    <!-- Preference Titles -->


    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
