<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <TableLayout tools:context=".MainActivity" android:stretchColumns="3" android:layout_margin="16dp" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">


    <TableRow>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/serverHost" android:gravity="end"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" tools:text="Filler" android:inputType="textPersonName" android:layout_span="3" android:id="@+id/hostField"/>

    </TableRow>

    <TableRow>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/serverPort" android:gravity="end"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" tools:text="123 Some Street" android:inputType="textPostalAddress" android:layout_span="3" android:id="@+id/serverPort"/>

</TableRow>


    <TableRow>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/userName" android:gravity="end"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" tools:text="Suite 123" android:inputType="textPostalAddress" android:layout_span="3" android:id="@+id/userNameField"/>

</TableRow>


    <TableRow>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/password" android:gravity="end"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" tools:text="Herriman" android:inputType="textPostalAddress" android:layout_span="3" android:id="@+id/passwordField"/>

</TableRow>


    <TableRow>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/firstName" android:gravity="end"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" tools:text="UT" android:inputType="text"  android:layout_span="3" android:id="@+id/firstNameField"/>

    </TableRow>

    <TableRow>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/lastName" android:gravity="end"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" tools:text="84096" android:inputType="text"  android:layout_span="3" android:id="@+id/lastNameField"/>

</TableRow>


    <TableRow>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/email" android:gravity="end"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" tools:text="jwilkerson@cs.byu.edu" android:inputType="textEmailAddress" android:layout_span="3" android:id="@+id/emailField"/>

</TableRow>
    <TableRow>
     <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/gender" android:gravity="end"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radio">
        <RadioButton android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/maleButton"/>
        <RadioButton android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femaleButton"/>

    </RadioGroup>
        </TableRow>





    <LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:gravity="center" android:paddingTop="20dp" android:orientation="horizontal">

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/signInButton" android:enabled="false" android:id="@+id/signInButton" />

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/registerButton" android:enabled="false" android:id="@+id/registerButton"/>

</LinearLayout>

</TableLayout>
</ScrollView>
    <!--
    <?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

        TODO: Update blank fragment layout
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment" />

    </FrameLayout> -->